--- a/net-im/libsignal-client/Makefile
+++ b/net-im/libsignal-client/Makefile
@@ -1,13 +1,12 @@
 PORTNAME=	libsignal-client
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.9.6
-PORTREVISION=	9
-PORTEPOCH=	1
+DISTVERSION=	0.20.0
 CATEGORIES=	net-im java
+WRKSRC=		${WRKDIR}/libsignal-${DISTVERSION}
 
-MAINTAINER=	0mp@FreeBSD.org
-COMMENT=	Implementation of the Signal client protocol
-WWW=		https://github.com/signalapp/libsignal-client
+MAINTAINER=    0mp@FreeBSD.org
+COMMENT=       Implementation of the Signal client protocol
+WWW=           https://github.com/signalapp/libsignal
 
 LICENSE=	AGPLv3
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -21,224 +20,216 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	signalapp
 USE_LDCONFIG=	yes
 
-CARGO_CRATES=	addr2line-0.14.1 \
+CARGO_CRATES=	addr2line-0.17.0 \
 		adler-1.0.2 \
-		aead-0.4.1 \
-		aes-0.7.4 \
-		aes-gcm-0.9.2 \
-		aes-gcm-siv-0.10.1 \
-		aho-corasick-0.7.15 \
-		anyhow-1.0.38 \
+		aead-0.4.3 \
+		aes-0.7.5 \
+		aes-gcm-0.9.4 \
+		aes-gcm-siv-0.10.3 \
+		aho-corasick-0.7.18 \
+		anyhow-1.0.56 \
 		arrayref-0.3.6 \
-		async-trait-0.1.42 \
+		asn1-0.9.1 \
+		asn1_derive-0.9.1 \
+		async-trait-0.1.52 \
 		atty-0.2.14 \
-		autocfg-0.1.7 \
-		autocfg-1.0.1 \
-		backtrace-0.3.56 \
-		base64-0.12.3 \
-		bitflags-1.2.1 \
+		autocfg-1.1.0 \
+		backtrace-0.3.64 \
+		base64-0.13.0 \
+		bincode-1.3.3 \
+		bindgen-0.60.1 \
+		bitflags-1.3.2 \
 		blake2-0.9.2 \
 		block-buffer-0.9.0 \
 		block-modes-0.8.1 \
 		block-padding-0.2.1 \
-		bstr-0.2.15 \
-		bumpalo-3.6.1 \
-		byteorder-1.4.2 \
-		bytes-1.0.1 \
-		cast-0.2.3 \
-		cc-1.0.67 \
+		bstr-0.2.17 \
+		bumpalo-3.7.1 \
+		byteorder-1.4.3 \
+		bytes-1.1.0 \
+		cast-0.2.7 \
+		cc-1.0.73 \
 		cesu8-1.1.0 \
+		cexpr-0.6.0 \
 		cfg-if-1.0.0 \
-		chacha20-0.7.2 \
+		chacha20-0.7.3 \
 		chacha20poly1305-0.8.2 \
 		chrono-0.4.19 \
 		cipher-0.3.0 \
-		clap-2.33.3 \
-		combine-4.5.2 \
-		cpufeatures-0.1.5 \
-		cpuid-bool-0.1.2 \
-		criterion-0.3.4 \
-		criterion-plot-0.4.3 \
-		crossbeam-channel-0.5.0 \
-		crossbeam-deque-0.8.0 \
-		crossbeam-epoch-0.9.2 \
-		crossbeam-utils-0.8.2 \
+		clang-sys-1.3.2 \
+		clap-2.34.0 \
+		cmake-0.1.48 \
+		combine-4.6.3 \
+		cpufeatures-0.2.2 \
+		criterion-0.3.5 \
+		criterion-plot-0.4.4 \
+		crossbeam-channel-0.5.4 \
+		crossbeam-deque-0.8.1 \
+		crossbeam-epoch-0.9.8 \
+		crossbeam-utils-0.8.8 \
 		crypto-mac-0.8.0 \
-		crypto-mac-0.9.1 \
-		cslice-0.2.0 \
-		csv-1.1.5 \
+		crypto-mac-0.11.1 \
+		csv-1.1.6 \
 		csv-core-0.1.10 \
-		ctr-0.7.0 \
-		derivative-2.2.0 \
+		ctr-0.8.0 \
 		digest-0.9.0 \
+		displaydoc-0.2.3 \
 		either-1.6.1 \
-		fixedbitset-0.2.0 \
-		foreign-types-0.3.2 \
-		foreign-types-shared-0.1.1 \
-		futures-core-0.3.13 \
-		futures-macro-0.3.13 \
-		futures-task-0.3.13 \
-		futures-util-0.3.13 \
-		generator-0.6.24 \
-		generic-array-0.14.4 \
+		fastrand-1.7.0 \
+		fixedbitset-0.4.1 \
+		foreign-types-0.5.0 \
+		foreign-types-macros-0.2.2 \
+		foreign-types-shared-0.3.1 \
+		futures-core-0.3.21 \
+		futures-macro-0.3.21 \
+		futures-task-0.3.21 \
+		futures-util-0.3.21 \
+		generic-array-0.14.5 \
 		getrandom-0.1.16 \
-		getrandom-0.2.2 \
-		ghash-0.4.2 \
-		gimli-0.23.0 \
-		half-1.7.1 \
-		hashbrown-0.9.1 \
-		heck-0.3.2 \
-		hermit-abi-0.1.18 \
-		hex-0.4.2 \
-		hmac-0.9.0 \
-		indexmap-1.6.1 \
-		itertools-0.9.0 \
-		itertools-0.10.1 \
-		itoa-0.4.7 \
+		getrandom-0.2.5 \
+		ghash-0.4.4 \
+		gimli-0.26.1 \
+		glob-0.3.0 \
+		half-1.8.2 \
+		hashbrown-0.11.2 \
+		heck-0.3.3 \
+		hermit-abi-0.1.19 \
+		hex-0.4.3 \
+		hex-literal-0.3.4 \
+		hkdf-0.11.0 \
+		hmac-0.11.0 \
+		indexmap-1.8.0 \
+		instant-0.1.12 \
+		itertools-0.10.3 \
+		itoa-0.4.8 \
+		itoa-1.0.1 \
 		jni-0.19.0 \
 		jni-sys-0.3.0 \
-		js-sys-0.3.47 \
-		keccak-0.1.0 \
+		js-sys-0.3.56 \
 		lazy_static-1.4.0 \
-		libc-0.2.97 \
+		lazycell-1.3.0 \
+		libc-0.2.121 \
 		libloading-0.6.7 \
-		libm-0.2.1 \
-		linkme-0.2.4 \
-		linkme-impl-0.2.4 \
+		libloading-0.7.3 \
+		linkme-0.2.10 \
+		linkme-impl-0.2.10 \
 		log-0.4.14 \
-		log-panics-2.0.0 \
-		loom-0.4.0 \
-		memchr-2.3.4 \
-		memoffset-0.6.1 \
+		log-panics-2.1.0 \
+		memchr-2.4.1 \
+		memoffset-0.6.5 \
+		minimal-lexical-0.2.1 \
 		miniz_oxide-0.4.4 \
-		multimap-0.8.2 \
-		neon-0.9.1 \
-		neon-build-0.9.1 \
-		neon-macros-0.9.1 \
-		neon-runtime-0.9.1 \
-		num-bigint-0.2.6 \
-		num-bigint-dig-0.6.1 \
-		num-integer-0.1.44 \
-		num-iter-0.1.42 \
+		multimap-0.8.3 \
+		neon-0.10.0 \
+		neon-build-0.10.0 \
+		neon-macros-0.10.0 \
+		neon-runtime-0.10.0 \
+		nom-7.1.1 \
+		num-integer-0.1.45 \
 		num-traits-0.2.14 \
-		num_cpus-1.13.0 \
-		num_enum-0.5.1 \
-		num_enum_derive-0.5.1 \
-		object-0.23.0 \
-		oid-0.1.1 \
-		once_cell-1.7.2 \
+		num_cpus-1.13.1 \
+		num_enum-0.5.7 \
+		num_enum_derive-0.5.7 \
+		object-0.27.1 \
 		oorandom-11.1.3 \
 		opaque-debug-0.3.0 \
-		openssl-0.10.32 \
-		openssl-sys-0.9.60 \
-		paste-1.0.4 \
-		pem-0.8.1 \
+		paste-1.0.6 \
+		peeking_take_while-0.1.2 \
 		pest-2.1.3 \
-		petgraph-0.5.1 \
-		picky-6.2.0 \
-		picky-asn1-0.3.1 \
-		picky-asn1-der-0.2.4 \
-		picky-asn1-x509-0.5.0 \
-		pin-project-lite-0.2.4 \
+		petgraph-0.6.0 \
+		pin-project-lite-0.2.8 \
 		pin-utils-0.1.0 \
-		pkg-config-0.3.19 \
-		plotters-0.3.0 \
-		plotters-backend-0.3.0 \
-		plotters-svg-0.3.0 \
-		poly1305-0.7.1 \
-		polyval-0.5.1 \
-		ppv-lite86-0.2.10 \
-		proc-macro-crate-0.1.5 \
-		proc-macro-hack-0.5.19 \
-		proc-macro-nested-0.1.7 \
-		proc-macro2-1.0.24 \
-		prost-0.8.0 \
-		prost-build-0.8.0 \
-		prost-derive-0.8.0 \
-		prost-types-0.8.0 \
-		quote-1.0.9 \
+		plotters-0.3.1 \
+		plotters-backend-0.3.2 \
+		plotters-svg-0.3.1 \
+		poly1305-0.7.2 \
+		polyval-0.5.3 \
+		ppv-lite86-0.2.16 \
+		proc-macro-crate-1.1.3 \
+		proc-macro2-1.0.29 \
+		prost-0.9.0 \
+		prost-build-0.9.0 \
+		prost-derive-0.9.0 \
+		prost-types-0.9.0 \
+		quote-1.0.10 \
 		rand-0.7.3 \
-		rand-0.8.3 \
+		rand-0.8.5 \
 		rand_chacha-0.2.2 \
-		rand_chacha-0.3.0 \
+		rand_chacha-0.3.1 \
 		rand_core-0.5.1 \
-		rand_core-0.6.2 \
+		rand_core-0.6.3 \
 		rand_hc-0.2.0 \
-		rand_hc-0.3.0 \
-		rayon-1.5.0 \
-		rayon-core-1.9.0 \
-		redox_syscall-0.2.5 \
-		regex-1.4.3 \
-		regex-automata-0.1.9 \
-		regex-syntax-0.6.22 \
+		rayon-1.5.1 \
+		rayon-core-1.9.1 \
+		redox_syscall-0.2.11 \
+		regex-1.5.5 \
+		regex-automata-0.1.10 \
+		regex-syntax-0.6.25 \
 		remove_dir_all-0.5.3 \
-		rsa-0.3.0 \
-		rustc-demangle-0.1.18 \
-		rustc_version-0.2.3 \
+		rustc-demangle-0.1.21 \
+		rustc-hash-1.1.0 \
 		rustc_version-0.3.3 \
-		rustversion-1.0.4 \
-		ryu-1.0.5 \
+		rustc_version-0.4.0 \
+		ryu-1.0.9 \
 		same-file-1.0.6 \
-		scoped-tls-1.0.0 \
 		scopeguard-1.1.0 \
 		semver-0.9.0 \
 		semver-0.11.0 \
+		semver-1.0.6 \
 		semver-parser-0.7.0 \
 		semver-parser-0.10.2 \
-		serde-1.0.123 \
-		serde_bytes-0.11.5 \
-		serde_cbor-0.11.1 \
-		serde_derive-1.0.123 \
-		serde_json-1.0.62 \
-		sha-1-0.9.4 \
-		sha2-0.9.3 \
-		sha3-0.9.1 \
-		simple_asn1-0.4.1 \
-		slab-0.4.2 \
-		smallvec-1.6.1 \
+		serde-1.0.136 \
+		serde_cbor-0.11.2 \
+		serde_derive-1.0.136 \
+		serde_json-1.0.79 \
+		sha-1-0.9.8 \
+		sha2-0.9.9 \
+		shlex-1.1.0 \
+		slab-0.4.5 \
+		smallvec-1.8.0 \
 		snow-0.8.0 \
-		spin-0.5.2 \
 		static_assertions-1.1.0 \
-		subtle-2.4.0 \
-		syn-1.0.60 \
+		subtle-2.4.1 \
+		syn-1.0.80 \
 		syn-mid-0.5.3 \
-		synstructure-0.12.4 \
-		tempfile-3.2.0 \
+		synstructure-0.12.6 \
+		tempfile-3.3.0 \
 		textwrap-0.11.0 \
-		thiserror-1.0.24 \
-		thiserror-impl-1.0.24 \
-		thread_local-1.1.3 \
-		time-0.1.43 \
-		tinytemplate-1.2.0 \
+		thiserror-1.0.30 \
+		thiserror-impl-1.0.30 \
+		time-0.1.44 \
+		tinytemplate-1.2.1 \
 		toml-0.5.8 \
-		typenum-1.12.0 \
+		typenum-1.15.0 \
 		ucd-trie-0.1.3 \
-		unicode-segmentation-1.7.1 \
-		unicode-width-0.1.8 \
-		unicode-xid-0.2.1 \
-		universal-hash-0.4.0 \
+		unicode-segmentation-1.9.0 \
+		unicode-width-0.1.9 \
+		unicode-xid-0.2.2 \
+		universal-hash-0.4.1 \
 		unzip3-1.0.0 \
-		uuid-0.8.2 \
-		vcpkg-0.2.11 \
-		version_check-0.9.2 \
-		walkdir-2.3.1 \
+		uuid-1.1.2 \
+		variant_count-1.1.0 \
+		version_check-0.9.4 \
+		walkdir-2.3.2 \
 		wasi-0.9.0+wasi-snapshot-preview1 \
-		wasi-0.10.2+wasi-snapshot-preview1 \
-		wasm-bindgen-0.2.70 \
-		wasm-bindgen-backend-0.2.70 \
-		wasm-bindgen-macro-0.2.70 \
-		wasm-bindgen-macro-support-0.2.70 \
-		wasm-bindgen-shared-0.2.70 \
-		web-sys-0.3.47 \
-		which-4.0.2 \
+		wasi-0.10.0+wasi-snapshot-preview1 \
+		wasm-bindgen-0.2.79 \
+		wasm-bindgen-backend-0.2.79 \
+		wasm-bindgen-macro-0.2.79 \
+		wasm-bindgen-macro-support-0.2.79 \
+		wasm-bindgen-shared-0.2.79 \
+		web-sys-0.3.56 \
+		which-4.2.4 \
 		winapi-0.3.9 \
 		winapi-i686-pc-windows-gnu-0.4.0 \
 		winapi-util-0.1.5 \
 		winapi-x86_64-pc-windows-gnu-0.4.0 \
-		x25519-dalek-1.1.0 \
+		x25519-dalek-1.1.1 \
 		zeroize-1.3.0 \
-		zeroize_derive-1.0.1 \
-		curve25519-dalek@git+https://github.com/signalapp/curve25519-dalek?branch=3.0.0-lizard2\#2694ad3b789635f90f941648ae952f58d59ffc73
+		zeroize_derive-1.3.2 \
+		curve25519-dalek@git+https://github.com/signalapp/curve25519-dalek?branch=lizard2\#4f0aa6653c51598daa0a2f53b8ba54ce0eedfbdd \
+		boring,boring-sys@git+https://github.com/signalapp/boring?branch=libsignal\#b95cb545b97395cdf5da36814f7dfb6e3856a99c
+
 CARGO_BUILD_ARGS=	--package libsignal-jni
 MAKE_ENV=		CARGO_PROFILE_RELEASE_LTO=thin \
 			OPENSSL_INCLUDE_DIR=${OPENSSLINC} \
